tests/ui/higher-ranked/leak-check/candidate-from-env-universe-err-project.next.stderr
error[E0271]: type mismatch resolving `<T as Trait<'a>>::Assoc == usize`
  --> $DIR/candidate-from-env-universe-err-project.rs:38:24
   |
LL |     projection_bound::<T>();
   |                        ^ types differ
   |
note: required by a bound in `projection_bound`
  --> $DIR/candidate-from-env-universe-err-project.rs:19:42
   |
LL | fn projection_bound<T: for<'a> Trait<'a, Assoc = usize>>() {}
   |                                          ^^^^^^^^^^^^^ required by this bound in `projection_bound`

error: higher-ranked subtype error
  --> $DIR/candidate-from-env-universe-err-project.rs:52:30
   |
LL |     let _higher_ranked_norm: for<'a> fn(<T as Trait<'a>>::Assoc) = |_| ();
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/candidate-from-env-universe-err-project.rs:52:30
   |
LL |     let _higher_ranked_norm: for<'a> fn(<T as Trait<'a>>::Assoc) = |_| ();
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0271`.
